fix(action buttons): fix button spacing

--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,9 @@
 }
 .actions {
   padding-top:1em;
+  display: flex;
+  justify-content: flex-start;
+  gap: .5em;
 }
 input:focus {
   outline: 0;
